--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="container">
         <header>
             <h1>Kaçkar Ultra by UTMB Söyleşi 2</h1>
-            <p>Stratejik Hazırlık ve Yarış Günü Taktikleri</p>
+            <p>Antrenman ve Mental Hazırlık</p>
         </header>
 
         <div id="faq-container">
