--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="container">
         <header>
             <h1>Kaçkar Ultra by UTMB Söyleşi 2</h1>
-            <p>Antrenman ve Mental Hazırlık</p>
+            <p>Kaçkar’a Hazırlık: Antrenman, Ekipman ve Mental Hazırlık</p>
         </header>
 
         <div id="faq-container">
